--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "tailwindcss": "^4.0.17",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
+  },
+  "volta": {
+    "node": "20.19.4"
   }
 }
